# QuickExpenseTracker

./: .gitignore  SETUP_STEPS.md  pyproject.toml
Transaction/: admin.py  form.py  models.py  urls.py  views.py
Transaction/migrations/: 0001_initial.py  0002_transaction_user.py
Transaction/templates/transaction/: _filters.html  homepage.html  transaction_confirm_delete.html  transaction_detail.html  transaction_form.html  transaction_list.html
Transaction/templates/transaction/includes/: footer.html  header.html
Users/: forms.py  urls.py  views.py
Users/templates/Users/: login.html  register.html
mysite/: settings.py  urls.py
templates/: base.html
