[project]
name = "expensetracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.40.25",
    "cookiecutter>=2.6.0",
    "dj-database-url>=3.0.1",
    "django>=5.2.6",
    "django-storages[s3]>=1.14.6",
    "django-tailwind>=4.2.0",
    "django-widget-tweaks>=1.5.0",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "gunicorn>=23.0.0",
    "honcho>=2.0.0",
    "pillow>=11.3.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.1",
    "tailwindcss>=0.0.1",
    "whitenoise>=6.9.0",
]
